# taperNOR

./: .Rbuildignore  .gitignore  DESCRIPTION  LICENSE  LICENSE.md  NAMESPACE  NEWS.md  README.md  cran-comments.md
.github/workflows/: R-CMD-check.yaml  pytest.yaml
R/: barkNO.R  barkNOR.R  dlocation.R  hfromd.R  kublin_no.R  plot_taper.R  sysdata.rda  taperNO.R  taperNOR.R  volume.R
data/: kublin_par_lme_spruce.rdata
data-raw/: sysdata.R
inst/: CITATION  WORDLIST
man/: barkNO.Rd  barkNOR.Rd  dlocation.Rd  hfromd.Rd  kublin_no.Rd  kublin_nor.Rd  plot_taper.Rd  taperNO.Rd  taperNOR.Rd  volume.Rd
python/: README.md  pyproject.toml
python/taper_nor/: __init__.py  bark.py  coefficients.py  inverse.py  taper.py  volume.py
python/tests/: test_taper_nor.py
tests/: testthat.R
tests/testthat/: test-kublin_nor.R  test-plot_taper.R  test-volume.R
